Add build tools for metatdenovo data

--- a/data/Makefile
+++ b/data/Makefile
@@ -1,2 +1,5 @@
+all:
+	cd lmo_polyA_metatdenovo; make all
+
 all_genomes.faa:
 	echo "Fetch a fasta file with GTDB orfs as amino acid sequences; call the file $@"
