Added transdecoder faa file

--- a/data/lmo_polyA_metatdenovo/Makefile
+++ b/data/lmo_polyA_metatdenovo/Makefile
@@ -1,2 +1,3 @@
 all:
 	rsync -avhP --size-only rackham:/crex/proj/snic2020-16-76/nobackup/projects/assembly/metaT/LMO_2016-17_polyA_metat/nf-core-metatdenovo/results/summary_tables/* ./.
+	rsync -avhP --size-only rackham:/crex/proj/snic2020-16-76/nobackup/projects/assembly/metaT/LMO_2016-17_polyA_metat/nf-core-metatdenovo/transdecoder_output/megahit_assembly.contigs.fa.transdecoder.pep.gz ./.
