Better names for polyA-tailed orfs in phyloplace analysis

--- a/hmmsearch/Makefile
+++ b/hmmsearch/Makefile
@@ -5,3 +5,6 @@ include ~/dev/biomakefiles/lib/make/makefile.misc
 HMMSEARCH_OPTS = --cpu 4
 HMMER_DB_FAA = <(gunzip -c transdecoder.faa.gz)
 HMMRANK_OPTS   = --minscore=26.8
+
+best.ranked.shorter_names.faa: best.ranked.faa
+	sed 's/_ *ORF.*//' $< > $@
