--- a/.screenrc
+++ b/.screenrc
@@ -5,6 +5,8 @@ chdir $ROOT/data
 screen -t data
 chdir $ROOT/scripts
 screen -t scripts
+chdir $ROOT/hmmsearch
+screen -t hmmsearch
 chdir $ROOT/phyloplace
 screen -t phyloplace
 chdir $ROOT
