--- a/hmmsearch/Makefile
+++ b/hmmsearch/Makefile
@@ -7,4 +7,4 @@ HMMER_DB_FAA = <(gunzip -c transdecoder.faa.gz)
 HMMRANK_OPTS   = --minscore=26.8
 
 best.ranked.shorter_names.faa: best.ranked.faa
-	sed 's/_ *ORF.*//' $< > $@
+	sed 's/_ *ORF.*//' $< | sed 's/>/>QUERY@/' > $@
